--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.minimoneybox">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -10,16 +12,26 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".LoginActivity"
+                android:name=".activities.LoginActivity"
+                android:screenOrientation="portrait"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
-
         </activity>
+
+        <activity
+                android:name=".activities.UserAccountActivity"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme" />
+
+        <activity
+                android:name=".activities.OneOffPaymentActivity"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme" />
+
     </application>
 
 </manifest>
